machine_learning_upload1

--- a/6. DBMS/2. databaes&SQL.md
+++ b/6. DBMS/2. databaes&SQL.md
@@ -1,8 +1,4 @@
-
-
-
-
-# 데이터베이스&SQL
+# 데이터베이스&SQL_기초
 
 ## 1. SQL문의 분류
 
@@ -245,10 +241,31 @@
   - Group by  및 having 그리고 집계 함수
   
     - ````mysql
+      -- amount를 userID별로 더해서 아이디와 총합을 조회
       use sqldb;
       select userID, sum(amount) from buytbl group by userID;
       
-      select userID as '사용자 아이디', sum(price*amount) as '총 구매 개수'
+      -- amount를 userID별로 더해서 userID를 '사용자 아이디'의 이름으로 총합을 '총 구매액'의 이름으로 조회
+      select userID as '사용자 아이디', sum(price*amount) as '총 구매액'
       from buytbl group by userID;
+      
+      -- 모든 amount 평균을 구해서 '평균 구매 개수'의 이름으로 조회
+      select avg(amount) as '평균 구매 개수' from buytbl;
+      
+      -- 가장 큰 키와 가장 작은 키의 회원 이름과 키를 조회 (원하는 결과값 아님)
+      
+      
+      
+      -- 가장 큰 키와 가장 작은 키의 회원 이름과 키를 조회 (성공)
+      select userName, height from usertbl 
+      where height = (select max(height) from usertbl) or 
+      height = (select min(height) from usertbl) ;
+      
+      
+      
       ````
+
+
+
+
 
