--- a/8. deep_learning/2. deep_learning 실습.md
+++ b/8. deep_learning/2. deep_learning 실습.md
@@ -2,5 +2,220 @@
 
 
 
-## 1. 피마인디언 데이터 분석하기
+## 1. 폐암 수술 환자의 생존율 예측
 
+- Code
+
+  ````python
+  # 딥러닝 구동 케라스 함수 호출
+  from tensorflow.keras.models import Sequential
+  from tensorflow.keras.layers import Dense
+  
+  import numpy as np
+  import tensorflow as tf
+  
+  # 실행할 때마다 같은 결과를 출력하기 위해 설정하는 부분 seed는 맞춰줘야함
+  np.random.seed(3)
+  tf.random.set_seed(3)
+  
+  # 데이터 불러오기 delimiter =',' 은 모든행을 의미
+  Data_set1 = np.loadtxt('./ThoraricSurgery.csv', delimiter=',')
+  ````
+
+  ```python
+  # 전체 열이 17개의 열로 구성되어 있음
+  # 0~16번째 데이터는 환자의 기록 -> X, 마지막 17번째 열은 수술 결과 -> Y
+  X=Data_set1[:,0:17]
+  Y=Data_set1[:,17]
+  
+  # 딥러닝 구조를 결정 (모델 설정하고 실행)
+  model = Sequential() # 틀 만들기
+  model.add(Dense(30, input_dim=17, activation='relu')) # 입력값 17, 은닉층 노드 30개, 활성화 함수 relu
+  model.add(Dense(1, activation='sigmoid')) # 입력값 이전층 출력값, 노드 1개, 활성화 함수 시그모이드(2 클래스 분류에서 주로 사용)
+  
+  # 딥러닝 실행
+  model.compile(loss='binary_crossentropy', optimizer='adam',metrics=['accuracy']) # 손실함수 두개의 클래서에서 예측할때
+  model.fit(X,Y, epochs=100, batch_size = 10) # 데이터 100번 넣어서 돌리기, 데이터 갯수를 10으로 나눠서 실행
+  
+  print("\n Accuray: %.4f" % (model.evaluate(X,Y)[1]))
+  ```
+
+  
+
+## 2. 피마인디언 데이터 분석하기
+
+- 데이터 살펴보기
+
+  ````python
+  import pandas as pd
+  import matplotlib.pyplot as plt
+  import seaborn as sns
+  
+  df = pd.read_csv('./pima-indians-diabetes.csv', 
+               names=["pregnant","plasma","pressure","thickness","insulin","BMI","pedigree","age","class"])
+  
+  df.info()
+  
+  df.describe()
+  
+  # 임신정보와 클래스만 출력
+  df[['pregnant', 'class']]
+  ````
+
+- 데이터 가공
+
+  ````python
+  print(df[['pregnant','class']].groupby(['pregnant'], as_index = False.mean().sort_values(by='pregnant', ascening=True)))
+  ````
+
+- 상관관계(그래프)
+
+  ````python
+  # 데이터 간의 상관관계를 그래프로 표현
+  
+  colormap = plt.cm.gist_heat # 그래프 색상 구성
+  plt.figure(figsize=(12,12)) # 그래프 크기
+  
+  # vmax의 값을 0.5fh wlwjdgo 0.5에 가까울 수록 밝은 색으로 표시하게 함
+  sns.heatmap(df.corr(),linewidths=0.1, vmax=0.5, cmap=colormap, linecolor='white', annot=True)
+  ````
+
+  ````python
+  # 당뇨병 환자의 경우 plasma의 수치
+  gird = sns.FacetGrid(df, col='class')
+  gird.map(plt.hist, 'plasma', bins = 10)
+  ````
+
+- 딥러닝
+
+  ````python
+  from tensorflow.keras.models import Sequential
+  from tensorflow.keras.layers import Dense
+  import numpy as np
+  import tensorflow as tf
+  
+  np.random.seed(3)
+  tf.random.set_seed(3)
+  
+  Data_set = np.loadtxt('./pima-indians-diabetes.csv', delimiter=",")
+  # 마지막 컬럼 당뇨병 여부 클래스
+  X= Data_set[:,0:8]
+  Y= Data_set[:,8]
+  
+  # 모델 설정
+  model = Sequential()
+  model.add(Dense(30, input_dim=8, activation='relu'))
+  model.add(Dense(8, activation='relu'))
+  model.add(Dense(1, activation='sigmoid'))
+  
+  # 모델 컴파일
+  model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])
+  
+  # 모델 실행
+  model.fit(X,Y, epochs=200, batch_size=10)
+  
+  # 결과 출력
+  print("/n Accuarcy: %.4f"% (model.evaluate(X,Y)[1]))
+  ````
+
+
+
+## 3. 아이리스 데이터 분석(다중분류 선택)
+
+- 데이터 불러오기
+
+  ````python
+  import pandas as pd
+  
+  df = pd.read_csv('./iris.csv', names = ['sepal_length','sepal_width','petal_length','petal_width','species'])
+  ````
+
+- 상관관계(그래프)
+
+  ````python
+  import seaborn as sns
+  import matplotlib.pyplot as plt
+  
+  sns.pairplot(df, hue='species');
+  ````
+
+- 원-핫 인코딩
+
+  ````python
+  from tensorflow.keras.models import Sequential
+  from tensorflow.keras.layers import Dense
+  from sklearn.preprocessing import LabelEncoder
+  import numpy as np
+  import tensorflow as tf
+  
+  np.random.seed(3)
+  tf.random.set_seed(3)
+  
+  df = pd.read_csv('./iris.csv', names = ['sepal_length','sepal_width','petal_length','petal_width','species'])
+  
+  dataset = df.values
+  X = dataset[:,0:4].astype(float)
+  Y_obj = dataset[:,4]
+  
+  # 문자열을 숫자열로 변환(원-핫 인코딩)
+  e = LabelEncoder()
+  e.fit(Y_obj)
+  Y = e.transform(Y_obj)
+  Y_encoded = tf.keras.utils.to_categorical(Y)
+  ````
+
+- 딥러닝
+
+  ````python
+  model = Sequential()
+  model.add(Dense(16, input_dim=4, activation='relu'))
+  model.add(Dense(3, activation='softmax')) # sotfmax 다중 분류
+  
+  model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy']) 
+  # categorical_crossentropy : 범주형 교차 엔트로피(일반적 분류)
+  model.fit(X,Y_encoded, epochs=50, batch_size=1)
+  
+  print("\n Accuarcy: %.4f" %(model.evaluate(X,Y_encoded)[1]))
+  ````
+
+
+
+## 4. 초음파 광물 예측(과적합 피하기)
+
+- 딥러닝
+
+  ````python
+  from tensorflow.keras.models import Sequential
+  from tensorflow.keras.layers import Dense
+  from sklearn.preprocessing import LabelEncoder
+  
+  import pandas as pd
+  import seaborn as sns
+  import numpy as np
+  import tensorflow as tf
+  
+  np.random.seed(3)
+  tf.random.set_seed(3)
+  
+  df = pd.read_csv('./sonar.csv', header=None)
+  
+  dataset = df.values
+  X = dataset[:,0:60].astype(float)
+  Y_obj = dataset[:,60]
+  
+  e = LabelEncoder()
+  e.fit(Y_obj)
+  Y = e.transform(Y_obj)
+  
+  model = Sequential()
+  model.add(Dense(24, input_dim=60, activation='relu'))
+  model.add(Dense(10, activation='relu'))
+  model.add(Dense(1, activation='sigmoid'))
+  
+  model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])
+  model.fit(X,Y, epochs=200, batch_size=5)
+  
+  print("\n Accuarcy: %.4f" %(model.evaluate(X,Y)[1]))
+  ````
+
+  
