--- a/8. deep_learning/3. CNN(Dense Layer).md
+++ b/8. deep_learning/3. CNN(Dense Layer).md
@@ -1,8 +1,8 @@
 # 4-5. 딥러닝-실습(CNN)
 
+## [1] Dense Layer 모델
 
-
-## 1.  데이터 불러오기
+### 1.  데이터 불러오기
 
 ````python
 import numpy as np 
@@ -27,7 +27,7 @@ test dataset shape: (10000, 28, 28) (10000,)
 
 
 
-## 2. MINIST image array 시각화
+### 2. MINIST image array 시각화
 
 ````python
 import matplotlib.pyplot as plt
@@ -113,7 +113,7 @@ show_images(train_images[8:16], train_labels[8:16], ncols=8) # 2열 출력
 
 
 
-## 3. 데이터 전처리 수행
+### 3. 데이터 전처리 수행
 
 ````python
 # 0 ~ 255 사이의 픽셀값을 0~1 사이 값으로 변환 -> 수행 속도를 위해 
@@ -190,7 +190,7 @@ test_labels[0]
 
 
 
-## 4. Dense Layer를 기반으로 모델을 생성
+### 4. Dense Layer를 기반으로 모델을 생성
 
 ````python
 INPUT_SIZE = 28
@@ -233,7 +233,7 @@ _________________________________________________________________
 
 
 
-## 5. 모델의 Loss와 Optimizer 설정하고 학습 수행
+### 5. 모델의 Loss와 Optimizer 설정하고 학습 수행
 
 ````python
 from tensorflow.keras.optimizers import Adam
@@ -383,7 +383,7 @@ print(len(history.history['loss']))
 
 
 
-## 6. 테스트 데이터를 기반으로 Label 값 예측
+### 6. 테스트 데이터를 기반으로 Label 값 예측
 
 ````python
 test_images.shape
@@ -465,7 +465,7 @@ target class value: 9.0 predicted class value: 9
 
 
 
-## 7. 테스트 데이터 세트로 모델 성능 검증
+### 7. 테스트 데이터 세트로 모델 성능 검증
 
 ````python
 # 평가
@@ -844,6 +844,10 @@ Trainable params: 98,700
 Non-trainable params: 0
 _________________________________________________________________
 ````
+
+
+
+
 
 
 
