자연어처리_upload

--- a/9. 자연어 처리/1. 자연어 처리.md
+++ b/9. 자연어 처리/1. 자연어 처리.md
@@ -12,7 +12,412 @@
 
 ### [1] 토큰화(Tokenization)
 
-#### - 단어 토큰화(Word Tokenization)
+- 자연어 처리에서 크롤링 등을 얻어낸 코퍼스 데이터가 필요에 맞게 전처리되지 않은 상태라면, 해당 데이터를 사용하고는 용도에 맞게 토큰화&정제&정규화 하는 일을 하게 됩니다. 
+- 주어진 코퍼스에서 토큰이라 불리는 단위로 나누는 작업을 토큰화라고 합니다. 
+
+#### (1) 단어 토큰화
+
+  - 토큰의 기준을 단어로 하는 경우
+
+  - 여기서 단어는 단어 외에도 단어구, 의미를 갖는 문자열로도 간주되기도 합니다. 
+
+  - `예시` 
+
+    구두점을 지운 뒤에 띄어쓰기를 기준로 자르기
+
+````tex
+입력: Time is an illusion. Lunchtime double so!
+````
+
+````tex
+출력 : "Time", "is", "an", "illustion", "Lunchtime", "double", "so"
+````
+
+- 단순히 구두점이나 특수문자를 전부 제거하게 되면 의미를 모두 잃어버리는 경우도 발생하기도 합니다. 그리고 띄어쓰기 단위로 자르는 것은 영어보다 한국어가 구분하기 어렵습니다. 
+
+
+
+#### (2) 토큰화 중 생기는 선택의 순간
+
+- 토큰화의 기준 정할시, 해당 데이터를 가지고 어떤 용도로 사용할 것인지에 따라 그 용도에 영향이 없는 기준을 정하면 됩니다. 
+
+- 예를 들어 "Don't"와 같이 아포스트로피가 들어간 상황에서는 어떻게 토큰화를 해야할지 생각해볼 필요가 있습니다. 
+
+- NLTK 영어 코프서를 토큰화 하기 위한 도구들 
+
+  - word_tokenize
+
+  ````python
+  from nltk.tokenize import word_tokenize
+  
+  print(word_tokenize("Don't be fooled by the dark sounding name, \
+                      Mr. Jone's Orphanage is a as cheery as cheery goes for a pastry shop."))
+  ````
+
+  ````python
+  # 결과
+  ['Do', "n't", 'be', 'fooled', 'by', 'the', 'dark', 'sounding', 'name', ',', 'Mr.', 'Jone', "'s", 'Orphanage', 'is', 'a', 'as', 'cheery', 'as', 'cheery', 'goes', 'for', 'a', 'pastry', 'shop', '.']
+  ````
+
+  - WordPunctTokenizer
+
+  ````python
+  from nltk.tokenize import WordPunctTokenizer
+  
+  print(WordPunctTokenizer().tokenize("Don't be fooled by the dark sounding name, \
+                                      Mr. Jone's Orphanage is a as cheery as cheery goes for a pastry shop."))
+  ````
+
+  ````python
+  # 결과
+  ['Don', "'", 't', 'be', 'fooled', 'by', 'the', 'dark', 'sounding', 'name', ',', 'Mr', '.', 'Jone', "'", 's', 'Orphanage', 'is', 'a', 'as', 'cheery', 'as', 'cheery', 'goes', 'for', 'a', 'pastry', 'shop', '.']
+  ````
+
+  - 케라스의 토큰화 도구 - text_to_word_sequence
+
+  ````python
+  from tensorflow.keras.preprocessing.text import text_to_word_sequence
+  print(text_to_word_sequence("Don't be fooled by the dark sounding name, \
+                              Mr. Jone's Orphanage is a as cheery as cheery goes for a pastry shop."))
+  ````
+
+  ````python
+  # 결과
+  ["don't", 'be', 'fooled', 'by', 'the', 'dark', 'sounding', 'name', 'mr', "jone's", 'orphanage', 'is', 'a', 'as', 'cheery', 'as', 'cheery', 'goes', 'for', 'a', 'pastry', 'shop']
+  ````
+
+
+
+#### (3) 토큰화에서 고려해야할 사항 
+
+- 구두점이나 특수 문자를 단순 제외해서는 안 된다. 
+
+- 줄임말과 단어 내에 띄어쓰기가 있는 경우.
+
+- 표준 토큰화 예제
+
+  규칙 1. 하이푼으로 구성된 단어는 하나로 유지한다.
+
+  규칙 2. dosen't와 같이 아포스트로피로 '접어'가 함께하는 단어는 분리해준다.
+
+  ````python
+  from nltk.tokenize import TreebankWordTokenizer
+  
+  tokenizer = TreebankWordTokenizer()
+  
+  text = "Starting a home-based restaurant may be an ideal. \
+  it doesn't have a food chain or restaurant of their own."
+  
+  print('트리뱅크 워드토그나이저 :', tokenizer.tokenize(text))
+  ````
+
+  ````python
+  # 결과
+  트리뱅크 워드토그나이저 : ['Starting', 'a', 'home-based', 'restaurant', 'may', 'be', 'an', 'ideal.', 'it', 'does', "n't", 'have', 'a', 'food', 'chain', 'or', 'restaurant', 'of', 'their', 'own', '.']
+  ````
+
+  
+
+#### (4) 문장 토큰화
+
+- 이 작업은 코퍼스 내에서 문장 단위로 구분하는 작업으로 때로는 문장 분류라고도 부릅니다. 코퍼스가 정제되어 있지 않는 상태라면, 코퍼스는 문장 단위로 구분되어 있지 않아서 이를 사용하고자 하는 용도에 맞게 문장 토큰화가 필요할 수 있습니다. 
+
+- ?나 마침표(.)나 !를 기준으로 문장을 잘라낼수도 있지만, 마침표의 경우에는 문장의 끝이 아니더라도 등장할 수 있습니다. 
+
+- NLTK 영어 문장 토큰화 도구
+
+  - sent_tokenize
+
+    ````python
+    from nltk.tokenize import sent_tokenize
+    
+    text = "His barber kept his word. But keeping such a huge secret to himself was driving him crazy. Finally, the barber went up a mountain and almost to the edge of a cliff. He dug a hole in the midst of some reeds. He looked about, to make sure no one was near."
+    
+    print('문장 토큰화1:', sent_tokenize(text))
+    ````
+
+    ````python
+    # 결과
+    문장 토큰화1: ['His barber kept his word.', 'But keeping such a huge secret to himself was driving him crazy.', 'Finally, the barber went up a mountain and almost to the edge of a cliff.', 'He dug a hole in the midst of some reeds.He looked about, to make sure no one was near.']
+    ````
+
+    ````python
+    text = "I am actively looking for Ph.D. srudents.and you are a Ph.D student."
+    
+    print('문장 토큰화2 :', sent_tokenize(text))
+    ````
+
+    ````python
+    # 결과
+    문장 토큰화2 : ['I am actively looking for Ph.D. srudents.and you are a Ph.D student.']
+    ````
+
+- 한국어 문장 토큰화 도구
+
+  - KSS
+
+    ````python
+    import kss
+    
+    text = '딥 러닝 자연어 처리가 재미있기는 합니다. 그런데 문제는 영어보다 한국어로 할 때 너무 어렵습니다. 이제 해보면 알걸요?'
+    print('한국어 문장 토큰화:', kss.split_sentences(text))
+    ````
+
+    ````python
+    # 결과
+    한국어 문장 토큰화: ['딥 러닝 자연어 처리가 재미있기는 합니다.', '그런데 문제는 영어보다 한국어로 할 때 너무 어렵습니다.', '이제 해보면 알걸요?']
+    ````
+
+
+
+#### (5) 한국어에서의 토큰화의 어려움
+
+- 교착어의 특성
+
+  - 다양한 조사가 존재합니다. 자연어 처리를 하다보면 같은 단어임에도 서로 다른 조사가 붙어서 다른 단어로 인식이 되면 자연어 처리가 힘들고 번거로워지는 경우가 있기 때문에 대부분의 한국어 NLP에서 조사는 분리해줄 필요가 있습니다. 
+
+  - 형태소
+
+    - 뜻을 가진 가장 작은 말의 단위
+
+    - **자립 형태소**
+
+      - 접사, 어미, 조사와 상관없이 자립하여 사용할 수 있는 형태소. 그 자체로 단어가 됩니다다. 체언(명사, 대명사, 수사), 수식언(관형사, 부사), 감탄사 등이 있습니다.
+
+    - **의존 형태소**
+
+      - 다른 형태소와 결합하여 사용되는 형태소. 접사, 어미, 조사 어간을 말합니다. 
+
+      
+
+- 한국어는 띄어쓰기가 영어보다 잘 지켜지지 않는다.
+
+
+
+#### (6) 품사 태깅
+
+- 단어의 의미를 제대로 파악하기 위해서는 해당 단어가 어떤 품사로 쓰였는지 보는 것이 주요 지표가 될 수 있습니다. 그에 따라 단어 토큰화 과정에서 각 단어가 어떤 품사로 쓰였는지를 구분해놓기도 하는데, 이 작업을 품사 태깅이라고 합니다. 
+
+
+
+#### (7) NLTK와 KoNLPy를 이용한 영어, 한국어 토큰화 실습
+
+- NLTK에서 Penn Treebank POS Tags 기준을 사용하여 품사 태깅
+
+- PRP는 인칭 대명사, VBP는 동사, RB는 부사, VBG는 현재부사, IN은 전치사, NNP는 고유 명사, NNS는 복수형 명사, CC는 접속사, DT는 관사
+
+  ````python
+  from nltk.tokenize import word_tokenize
+  from nltk.tag import pos_tag
+  
+  text = "I am actively looking for Ph.D. students. and you are a Ph.D. student."
+  tokenized_sentence = word_tokenize(text)
+  
+  print('단어 토큰화 :', tokenized_sentence)
+  print('품사 태깅 : ', pos_tag(tokenized_sentence))
+  ````
+
+  ````python
+  # 결과
+  단어 토큰화 : ['I', 'am', 'actively', 'looking', 'for', 'Ph.D.', 'students', '.', 'and', 'you', 'are', 'a', 'Ph.D.', 'student', '.']
+  품사 태깅 :  [('I', 'PRP'), ('am', 'VBP'), ('actively', 'RB'), ('looking', 'VBG'), ('for', 'IN'), ('Ph.D.', 'NNP'), ('students', 'NNS'), ('.', '.'), ('and', 'CC'), ('you', 'PRP'), ('are', 'VBP'), ('a', 'DT'), ('Ph.D.', 'NNP'), ('student', 'NN'), ('.', '.')]
+  ````
+
+
+
+- KoNLPy를 활용해서 사용할 수 있는 형태소 분석기
+
+  - Okt(Open Korea Text), 메캅(Mecab), 코모란(Komoran), 한나눔(Hannanum), 꼬꼬마(Kkma)
+
+    ````python
+    from konlpy.tag import Okt
+    from konlpy.tag import Kkma
+    
+    okt = Okt()
+    kkma = Kkma()
+    
+    print('OKT 형태소 분석 :',okt.morphs("열심히 코딩한 당신, 연휴에는 여행을 가봐요")) # morphs : 형태소 추출
+    print('OKT 품사 태깅 :',okt.pos("열심히 코딩한 당신, 연휴에는 여행을 가봐요")) # pos : 품사 태깅(Part-of-speech tagging)
+    print('OKT 명사 추출 :',okt.nouns("열심히 코딩한 당신, 연휴에는 여행을 가봐요")) # nouns : 명사 추출
+    ````
+
+    ```python
+    # 결과
+    OKT 형태소 분석 : ['열심히', '코딩', '한', '당신', ',', '연휴', '에는', '여행', '을', '가봐요']
+    OKT 품사 태깅 : [('열심히', 'Adverb'), ('코딩', 'Noun'), ('한', 'Josa'), ('당신', 'Noun'), (',', 'Punctuation'), ('연휴', 'Noun'), ('에는', 'Josa'), ('여행', 'Noun'), ('을', 'Josa'), ('가봐요', 'Verb')]
+    OKT 명사 추출 : ['코딩', '당신', '연휴', '여행']
+    ```
+
+    ````python
+    print('꼬꼬마 형태소 분석 :', kkma.morphs("열심히 코딩한 당신, 연휴에는 여행을 가봐요")) # morphs : 형태소 추출
+    print('꼬꼬마 품사 태깅 :', kkma.pos("열심히 코딩한 당신, 연휴에는 여행을 가봐요")) # pos : 품사 태깅(Part-of-speech tagging)
+    print('꼬꼬마 명사 추출 :', kkma.nouns("열심히 코딩한 당신, 연휴에는 여행을 가봐요")) # nouns : 명사 추출
+    ````
+
+    ```python
+    # 결과
+    꼬꼬마 형태소 분석 : ['열심히', '코딩', '하', 'ㄴ', '당신', ',', '연휴', '에', '는', '여행', '을', '가보', '아요']
+    꼬꼬마 품사 태깅 : [('열심히', 'MAG'), ('코딩', 'NNG'), ('하', 'XSV'), ('ㄴ', 'ETD'), ('당신', 'NP'), (',', 'SP'), ('연휴', 'NNG'), ('에', 'JKM'), ('는', 'JX'), ('여행', 'NNG'), ('을', 'JKO'), ('가보', 'VV'), ('아요', 'EFN')]
+    꼬꼬마 명사 추출 : ['코딩', '당신', '연휴', '여행']
+    ```
+
+
+
+### [2] 정제(Cleaning) and 정규화(Normalization)
+
+- 정제 : 갖고 있는 코퍼스로부터 노이즈 데이터를 제거한다.
+- 정규화 : 표현 방법이 다른 단어들을 통합시켜서 같은 단어로 만들어준다.
+
+- 규칙에 기반한 표기가 다른 단어들의 통합
+
+- 대, 소문자 통합
+
+- 불필요한 단어의 제거
+
+  - 등장 빈도가 적은 단어
+
+  - 길이가 짧은 단어
+
+    ````python
+    import re
+    text = "I was wondering if anyone out there could enlighten me on this car"
+    # 길이가 1~2인 단어들을 정규 표현식을 이용하여 삭제
+    shortword = re.compile(r'\W*\b\w{1,2}\b')
+    print(shortword.sub('',text))
+    ````
+
+    ````python
+    # 결과
+    was wondering anyone out there could enlighten this car
+    ````
+
+    
+
+### [3] 어간 추출(Stemming) and 표제어 추출(Lemmatization)
+
+#### (1) 표제어 추출
+
+- 표제어 또는 기본 사전형 단어의 의미
+- 표제어 추출 
+  - 단어들로부터 표제어를 찾아가는 과정
+  - 단어의 형태학적 파싱을 먼저 진행하는 것
+- 어간 (stem)
+  - 단어의 의미를 담고 있는 단어의 핵심 부분
+
+- 접사 (affix)
+
+  - 단어에 추가적인 의미를 주는 부분
+
+- NLTK 표제어 추출 도구 
+
+  - WordNetLemmatizer
+
+    ````python
+    from nltk.stem import WordNetLemmatizer
+    
+    n=WordNetLemmatizer()
+    
+    words = ['policy', 'doing', 'organization','have','going','love','lives','fly','dies','watched','has','starting']
+    
+    print([n.lemmatize(w) for w in words])
+    print('표제어 추출 전 :',words)
+    print('표제어 추출 후 :',[n.lemmatize(word) for word in words])
+    ````
+
+    ````python
+    # 결과
+    ['policy', 'doing', 'organization', 'have', 'going', 'love', 'life', 'fly', 'dy', 'watched', 'ha', 'starting']
+    표제어 추출 전 : ['policy', 'doing', 'organization', 'have', 'going', 'love', 'lives', 'fly', 'dies', 'watched', 'has', 'starting']
+    표제어 추출 후 : ['policy', 'doing', 'organization', 'have', 'going', 'love', 'life', 'fly', 'dy', 'watched', 'ha', 'starting']
+    ````
+
+    ````python
+    # WordNetLemmatizer는 입력으로 단어가 동사 품사라는 사실을 알려줄 수 있습니다.
+    n.lemmatize('dies','v')
+    ````
+
+    ````python
+    # 결과
+    'die'
+    ````
+
+    ````python
+    n.lemmatize('watched', 'v')
+    ````
+
+    ````python
+    # 결과
+    'watch'
+    ````
+
+
+
+#### (2) 어간 추출
+
+- 어간을 추출하는 작업
+
+- 섬세한 작업은 아니기 때문에 어간 추출 후에 나오는 결과 단어는 사전에 존재하지 않는 단어일 수도 있습니다.
+
+  ````python
+  from nltk.stem import PorterStemmer
+  from nltk.tokenize import word_tokenize
+  
+  stemmer = PorterStemmer()
+  
+  sentence = "This was not the map we found in Billy Bones's chest, but an accurate copy, complete in all things--names and height and soundings--with the single exception of the red crosses and the written notes."
+  
+  tokenized_sentence = word_tokenize(sentence)
+  
+  print('어간 추출 전:', tokenized_sentence)
+  print('어간 추출 후:', [stemmer.stem(word) for word in tokenized_sentence])
+  ````
+
+  ````python
+  # 결과
+  어간 추출 전: ['This', 'was', 'not', 'the', 'map', 'we', 'found', 'in', 'Billy', 'Bones', "'s", 'chest', ',', 'but', 'an', 'accurate', 'copy', ',', 'complete', 'in', 'all', 'things', '--', 'names', 'and', 'height', 'and', 'soundings', '--', 'with', 'the', 'single', 'exception', 'of', 'the', 'red', 'crosses', 'and', 'the', 'written', 'notes', '.']
+  어간 추출 후: ['thi', 'wa', 'not', 'the', 'map', 'we', 'found', 'in', 'billi', 'bone', "'s", 'chest', ',', 'but', 'an', 'accur', 'copi', ',', 'complet', 'in', 'all', 'thing', '--', 'name', 'and', 'height', 'and', 'sound', '--', 'with', 'the', 'singl', 'except', 'of', 'the', 'red', 'cross', 'and', 'the', 'written', 'note', '.']
+  ````
+
+  ````python
+  words = ['formalize', 'allowance', 'electricical']
+  
+  print('어간 추출 전 :', words)
+  print('어간 추출 후 :', [stemmer.stem(word) for word in words])
+  ````
+
+  ````python
+  어간 추출 전 : ['formalize', 'allowance', 'electricical']
+  어간 추출 후 : ['formal', 'allow', 'electric']
+  ````
+
+- PorterStemmer과 LancasterStemmer
+
+  ````python
+  from nltk.stem import PorterStemmer
+  from nltk.stem import LancasterStemmer
+  
+  porter_stemmer = PorterStemmer() # 정밀하고 속도가 더 빠르고 정확도 높음
+  lancaster_stemmer = LancasterStemmer()
+  
+  words = ['policy', 'doing', 'organization', 'have','going','love','lives','fly','dies','watched','has','starting']
+  
+  print('어간 추출 전:', words)
+  print('포터 스테머의 어간 추출 후:', [porter_stemmer.stem(w) for w in words])
+  print('랭커스터 스테머의 어간 추출 후:', [lancaster_stemmer.stem(w) for w in words])
+  ````
+
+  ```python
+  # 결과
+  어간 추출 전: ['policy', 'doing', 'organization', 'have', 'going', 'love', 'lives', 'fly', 'dies', 'watched', 'has', 'starting']
+  포터 스테머의 어간 추출 후: ['polici', 'do', 'organ', 'have', 'go', 'love', 'live', 'fli', 'die', 'watch', 'ha', 'start']
+  랭커스터 스테머의 어간 추출 후: ['policy', 'doing', 'org', 'hav', 'going', 'lov', 'liv', 'fly', 'die', 'watch', 'has', 'start']
+  ```
+
+
+
+### [4] 불용어
+
+
 
 
 
